# rust-mongodb-rest-api

./: .gitignore  Cargo.toml  README.md
src/: main.rs  private.rs  test.http
src/database/: mod.rs
