[package]
name = "rust_quickstart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = "1"
mongodb = {version = "2.1", default-features = false, features = ["tokio-runtime"]}

# async-std = "1"
# mongodb = {version = "2.1", default-features = false, features = ["async-std-runtime"]}

bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc

chrono = "0.4" # Used for setting DateTimes

serde = "1" # Used in the Map Data into Structs section

rocket = {version = "0.5.0-rc.2", features = ["json"]}

dotenv = "0.15.0"